--- a/survey/src/main/res/values/strings.xml
+++ b/survey/src/main/res/values/strings.xml
@@ -10,8 +10,10 @@
     <string name="cancel">Cancel</string>
     <string name="next">Next</string>
 
+    <!-- Location step -->
     <string name="hint_address">Address</string>
-
+    <string name="location_permission_denied_permanently">Location permission was denied permanently, please go to settings of the app to enable it</string>
+    <string name="permission_not_granted">Permission not granted</string>
 
     <!-- Example app strings -->
     <string name="intro_title">Welcome to the\nQuickBird Studios\nHealth Survey</string>
