--- a/survey/src/main/res/values/strings.xml
+++ b/survey/src/main/res/values/strings.xml
@@ -63,4 +63,5 @@
     <string name="abort_dialog_message">If you leave now, your current answers are lost.</string>
     <string name="abort_dialog_neutral_message">Back to the survey</string>
     <string name="abort_dialog_negative_message">Cancel Survey</string>
+    <string name="add_value">Add value</string>
 </resources>
